{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 73,
  "lineage": "c56c7051-e271-6a8d-0541-9a9b5a254783",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b405a4ca4134e095",
            "arn": "arn:aws:ec2:ap-south-1:730933263564:elastic-ip/eipalloc-0b405a4ca4134e095",
            "domain": "vpc",
            "id": "eipalloc-0b405a4ca4134e095",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-15-252-34-210.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.252.34.210",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "iSmartContainer_Dev-dev-nat-eip",
              "Owner": "iPrasad_Dev",
              "Project": "iSmartContainer_Dev"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "iSmartContainer_Dev-dev-nat-eip",
              "Owner": "iPrasad_Dev",
              "Project": "iSmartContainer_Dev"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "730933263564",
            "id": "eipalloc-0b405a4ca4134e095",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:730933263564:internet-gateway/igw-00a650687e6037986",
            "id": "igw-00a650687e6037986",
            "owner_id": "730933263564",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "iSmartContainer_Dev-dev-igw",
              "Owner": "iPrasad_Dev",
              "Project": "iSmartContainer_Dev"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "iSmartContainer_Dev-dev-igw",
              "Owner": "iPrasad_Dev",
              "Project": "iSmartContainer_Dev"
            },
            "vpc_id": "vpc-01288ce346d7417b3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "730933263564",
            "id": "igw-00a650687e6037986",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b405a4ca4134e095",
            "association_id": "eipassoc-090b86d7683f365bb",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0536ddede44bd7f43",
            "network_interface_id": "eni-06a5f3d14b553e002",
            "private_ip": "10.0.1.204",
            "public_ip": "15.252.34.210",
            "region": "ap-south-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0948f7ba73dcdabed",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "iSmartContainer_Dev-dev-nat",
              "Owner": "iPrasad_Dev",
              "Project": "iSmartContainer_Dev"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "iSmartContainer_Dev-dev-nat",
              "Owner": "iPrasad_Dev",
              "Project": "iSmartContainer_Dev"
            },
            "vpc_id": "vpc-01288ce346d7417b3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "730933263564",
            "id": "nat-0536ddede44bd7f43",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.this",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:730933263564:route-table/rtb-0423e7cace6c08005",
            "id": "rtb-0423e7cace6c08005",
            "owner_id": "730933263564",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "iSmartContainer_Dev-dev-database-rt",
              "Owner": "iPrasad_Dev",
              "Project": "iSmartContainer_Dev"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "iSmartContainer_Dev-dev-database-rt",
              "Owner": "iPrasad_Dev",
              "Project": "iSmartContainer_Dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-01288ce346d7417b3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "730933263564",
            "id": "rtb-0423e7cace6c08005",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:730933263564:route-table/rtb-0f03933809f076011",
            "id": "rtb-0f03933809f076011",
            "owner_id": "730933263564",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0536ddede44bd7f43",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "iSmartContainer_Dev-dev-private-rt",
              "Owner": "iPrasad_Dev",
              "Project": "iSmartContainer_Dev"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "iSmartContainer_Dev-dev-private-rt",
              "Owner": "iPrasad_Dev",
              "Project": "iSmartContainer_Dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-01288ce346d7417b3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "730933263564",
            "id": "rtb-0f03933809f076011",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.this",
            "aws_nat_gateway.this",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:730933263564:route-table/rtb-0f765a5c05dd7273f",
            "id": "rtb-0f765a5c05dd7273f",
            "owner_id": "730933263564",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00a650687e6037986",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "iSmartContainer_Dev-dev-public-rt",
              "Owner": "iPrasad_Dev",
              "Project": "iSmartContainer_Dev"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "iSmartContainer_Dev-dev-public-rt",
              "Owner": "iPrasad_Dev",
              "Project": "iSmartContainer_Dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-01288ce346d7417b3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "730933263564",
            "id": "rtb-0f765a5c05dd7273f",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ap-south-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0affd16a027aa08e2",
            "region": "ap-south-1",
            "route_table_id": "rtb-0f03933809f076011",
            "subnet_id": "subnet-066abc06b67e429fe"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "730933263564",
            "id": "rtbassoc-0affd16a027aa08e2",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.this",
            "aws_nat_gateway.this",
            "aws_route_table.private",
            "aws_subnet.private_app",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "ap-south-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06cf17b84d4e5f1e8",
            "region": "ap-south-1",
            "route_table_id": "rtb-0f03933809f076011",
            "subnet_id": "subnet-0dcfa8cf22212304b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "730933263564",
            "id": "rtbassoc-06cf17b84d4e5f1e8",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.this",
            "aws_nat_gateway.this",
            "aws_route_table.private",
            "aws_subnet.private_app",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ap-south-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09306f87687671c99",
            "region": "ap-south-1",
            "route_table_id": "rtb-0423e7cace6c08005",
            "subnet_id": "subnet-0c9acc4b0775959ff"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "730933263564",
            "id": "rtbassoc-09306f87687671c99",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_route_table.database",
            "aws_subnet.private_db",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "ap-south-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a63f1c2bc6ea2a4c",
            "region": "ap-south-1",
            "route_table_id": "rtb-0423e7cace6c08005",
            "subnet_id": "subnet-056ae52aa436720a8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "730933263564",
            "id": "rtbassoc-0a63f1c2bc6ea2a4c",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_route_table.database",
            "aws_subnet.private_db",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ap-south-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07d23a73870b05e3a",
            "region": "ap-south-1",
            "route_table_id": "rtb-0f765a5c05dd7273f",
            "subnet_id": "subnet-0948f7ba73dcdabed"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "730933263564",
            "id": "rtbassoc-07d23a73870b05e3a",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "ap-south-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04694ecfc4c2175b1",
            "region": "ap-south-1",
            "route_table_id": "rtb-0f765a5c05dd7273f",
            "subnet_id": "subnet-0902c06451f9b5c2a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "730933263564",
            "id": "rtbassoc-04694ecfc4c2175b1",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ap-south-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:730933263564:subnet/subnet-066abc06b67e429fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-066abc06b67e429fe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730933263564",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "iSmartContainer_Dev-dev-private-app-ap-south-1a",
              "Owner": "iPrasad_Dev",
              "Project": "iSmartContainer_Dev",
              "Tier": "Private-App"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "iSmartContainer_Dev-dev-private-app-ap-south-1a",
              "Owner": "iPrasad_Dev",
              "Project": "iSmartContainer_Dev",
              "Tier": "Private-App"
            },
            "vpc_id": "vpc-01288ce346d7417b3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "730933263564",
            "id": "subnet-066abc06b67e429fe",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "ap-south-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:730933263564:subnet/subnet-0dcfa8cf22212304b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dcfa8cf22212304b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730933263564",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "iSmartContainer_Dev-dev-private-app-ap-south-1b",
              "Owner": "iPrasad_Dev",
              "Project": "iSmartContainer_Dev",
              "Tier": "Private-App"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "iSmartContainer_Dev-dev-private-app-ap-south-1b",
              "Owner": "iPrasad_Dev",
              "Project": "iSmartContainer_Dev",
              "Tier": "Private-App"
            },
            "vpc_id": "vpc-01288ce346d7417b3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "730933263564",
            "id": "subnet-0dcfa8cf22212304b",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ap-south-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:730933263564:subnet/subnet-0c9acc4b0775959ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c9acc4b0775959ff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730933263564",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "iSmartContainer_Dev-dev-private-db-ap-south-1a",
              "Owner": "iPrasad_Dev",
              "Project": "iSmartContainer_Dev",
              "Tier": "Private-DB"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "iSmartContainer_Dev-dev-private-db-ap-south-1a",
              "Owner": "iPrasad_Dev",
              "Project": "iSmartContainer_Dev",
              "Tier": "Private-DB"
            },
            "vpc_id": "vpc-01288ce346d7417b3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "730933263564",
            "id": "subnet-0c9acc4b0775959ff",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "ap-south-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:730933263564:subnet/subnet-056ae52aa436720a8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-056ae52aa436720a8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730933263564",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "iSmartContainer_Dev-dev-private-db-ap-south-1b",
              "Owner": "iPrasad_Dev",
              "Project": "iSmartContainer_Dev",
              "Tier": "Private-DB"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "iSmartContainer_Dev-dev-private-db-ap-south-1b",
              "Owner": "iPrasad_Dev",
              "Project": "iSmartContainer_Dev",
              "Tier": "Private-DB"
            },
            "vpc_id": "vpc-01288ce346d7417b3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "730933263564",
            "id": "subnet-056ae52aa436720a8",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ap-south-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:730933263564:subnet/subnet-0948f7ba73dcdabed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0948f7ba73dcdabed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "730933263564",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "iSmartContainer_Dev-dev-public-ap-south-1a",
              "Owner": "iPrasad_Dev",
              "Project": "iSmartContainer_Dev",
              "Tier": "Public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "iSmartContainer_Dev-dev-public-ap-south-1a",
              "Owner": "iPrasad_Dev",
              "Project": "iSmartContainer_Dev",
              "Tier": "Public"
            },
            "vpc_id": "vpc-01288ce346d7417b3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "730933263564",
            "id": "subnet-0948f7ba73dcdabed",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "ap-south-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:730933263564:subnet/subnet-0902c06451f9b5c2a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0902c06451f9b5c2a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "730933263564",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "iSmartContainer_Dev-dev-public-ap-south-1b",
              "Owner": "iPrasad_Dev",
              "Project": "iSmartContainer_Dev",
              "Tier": "Public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "iSmartContainer_Dev-dev-public-ap-south-1b",
              "Owner": "iPrasad_Dev",
              "Project": "iSmartContainer_Dev",
              "Tier": "Public"
            },
            "vpc_id": "vpc-01288ce346d7417b3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "730933263564",
            "id": "subnet-0902c06451f9b5c2a",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:730933263564:vpc/vpc-01288ce346d7417b3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a159e84e45859c0e",
            "default_route_table_id": "rtb-032d08cec277aa8ba",
            "default_security_group_id": "sg-0cd43a71f9f268d7e",
            "dhcp_options_id": "dopt-029abb1e390e8e285",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01288ce346d7417b3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-032d08cec277aa8ba",
            "owner_id": "730933263564",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "iSmartContainer_Dev-dev-vpc",
              "Owner": "iPrasad_Dev",
              "Project": "iSmartContainer_Dev"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "iSmartContainer_Dev-dev-vpc",
              "Owner": "iPrasad_Dev",
              "Project": "iSmartContainer_Dev"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "730933263564",
            "id": "vpc-01288ce346d7417b3",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}